# model-launch

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RUNNING_OPENCODE.md  mkdocs.yml  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: adding-new-model-to-sml.md  bug-report.md
.github/scripts/: build_image.py  cleanup_pr_images.py  import_sqsh.py
.github/workflows/: build-images.yml  ci-comprehensive.yml  ci-full.yml  ci-lightweight.yml  ci-static-checks.yml  ci.yml  cleanup-pr-images.yml  docker.yml  docs.yml  sonar.yml  static.yml
docs/: architecture.md  benchmarking.md  ci-cd.md  development.md  faq.md  getting-started.md  glossary.md  index.md  initialization.md  loadtesting.md  mcp.md  sizing.md  usage-advanced.md  usage-python.md  usage-sml.md
docs/adrs/: 0001-replica-is-the-orchestration-unit.md
examples/arcee-ai/: Trinity-Mini-vllm.sh  Trinity-Nano-Preview-vllm.sh
examples/deepseek-ai/: DeepSeek-V3.1-sglang-router.sh  DeepSeek-V3.1-sglang.sh
examples/huggingface/: SmolLM3-3B-sglang.sh
examples/mistralai/: Ministral-3-14B-Instruct-2512-vllm.sh  Ministral-3-3B-Instruct-2512-vllm.sh  Ministral-3-8B-Instruct-2512-vllm.sh  Mistral-7B-Instruct-v0.1-sglang.sh  Mistral-Large-3-675B-Instruct-2512-vllm.sh  Mistral-Small-24B-Instruct-2501-sglang.sh  Mixtral-8x22B-Instruct-v0.1-sglang.sh
examples/moonshotai/: Kimi-K2-Instruct-sglang.sh  Kimi-K2-Thinking-sglang.sh  Kimi-K2.5-sglang.sh
examples/python/: launch_apertus_8b.py  (+1 more)
harbor-opencode/: README.md  install-opencode.sh.j2  swiss_ai_opencode.py
images/: README.md
legacy/: .gitignore  requirements.txt
scripts/: README.md
serving/: README.md  sglang.toml  sglang_latest.toml  sglang_socket.toml  submit_job.py  template.jinja  utils.py  vllm.toml
tapes/: launch-apertus-terminals.tape  launch-apertus.tape
tests/: unit.py
(+281 files in other folders)
